--- a/gb/20/9/15/n12405683.md
+++ b/gb/20/9/15/n12405683.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wtnrng3147/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>重训选哪种？五大重点一篇看懂</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training_138319607-600x400.jpg" />
 <h6>新手进行重量训练，如何选择合适的重训项目？(Shutterstock)
 </h6>
 <hr>
-<p><span style="color: #188638;"><strong>【编者按】</strong><ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E8%AE%AD.md#1">重训</a>能增肌、减肥或塑身，甚至增加身体柔软度，但不同重训能达到的训练目标、效果都不同。新手进行<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F%E8%AE%AD%E7%BB%83.md#1">重量训练</a>，应该选择什么样的运动？国际武道大学体育学院准教授、专业格斗家荒川裕志指出，选择重训项目，要从“运动量”、“<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E8%B4%9F%E8%8D%B7.md#1">负荷</a>流失的难易度”、“伸张状态时的负荷”、“伸展效果”、“运动方式难易度”五大重点来判断，看哪种运动适合你。</span></p>
-<h2><span style="color: #188638;">选择<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E8%AE%AD.md#1">重训</a>项目，有五大基准</span></h2>
-<p>重训应着眼的重点随着目标而异，例如：藉重训减肥、藉高<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E8%B4%9F%E8%8D%B7.md#1">负荷</a>促进肌肥大、藉适度负荷打造紧实身体等。唯有按照目标与体力等级选择适当的项目，才能够持之以恒并获得确实的效果。</p>
+<p><span style="color: #188638;"><strong>【编者按】</strong><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%8D%E8%AE%AD.md#1">重训</a>能增肌、减肥或塑身，甚至增加身体柔软度，但不同重训能达到的训练目标、效果都不同。新手进行<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F%E8%AE%AD%E7%BB%83.md#1">重量训练</a>，应该选择什么样的运动？国际武道大学体育学院准教授、专业格斗家荒川裕志指出，选择重训项目，要从“运动量”、“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%9F%E8%8D%B7.md#1">负荷</a>流失的难易度”、“伸张状态时的负荷”、“伸展效果”、“运动方式难易度”五大重点来判断，看哪种运动适合你。</span></p>
+<h2><span style="color: #188638;">选择<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%8D%E8%AE%AD.md#1">重训</a>项目，有五大基准</span></h2>
+<p>重训应着眼的重点随着目标而异，例如：藉重训减肥、藉高<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%9F%E8%8D%B7.md#1">负荷</a>促进肌肥大、藉适度负荷打造紧实身体等。唯有按照目标与体力等级选择适当的项目，才能够持之以恒并获得确实的效果。</p>
 <table cellspacing="0" cellpadding="0">
 <tbody>
 <tr>
@@ -17,10 +17,10 @@
 </tr>
 <tr>
 <td valign="top"><span style="color: #000000; font-size: medium;">运动量</span></td>
-<td valign="top"><span style="color: #000000; font-size: medium;">运动量愈大的项目，会动用到的<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E8%82%8C%E8%82%89.md#1">肌肉</a>就愈多，<strong>消耗热量也愈大。</strong></span></td>
+<td valign="top"><span style="color: #000000; font-size: medium;">运动量愈大的项目，会动用到的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%8C%E8%82%89.md#1">肌肉</a>就愈多，<strong>消耗热量也愈大。</strong></span></td>
 </tr>
 <tr>
-<td valign="top"><span style="color: #000000; font-size: medium;">负荷流失的难易度（编者注：运动时，是否对<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E8%82%8C%E8%82%89.md#1">肌肉</a>持续施加负荷）</span></td>
+<td valign="top"><span style="color: #000000; font-size: medium;">负荷流失的难易度（编者注：运动时，是否对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%8C%E8%82%89.md#1">肌肉</a>持续施加负荷）</span></td>
 <td valign="top"><span style="color: #000000; font-size: medium;">愈难找到放松空档的项目，肌肉内的代谢环境就愈严苛，因此会产生更强的化学性压力。</span></td>
 </tr>
 <tr>
@@ -40,7 +40,7 @@
 <h2><span style="color: #188638;">一、运动量</span></h2>
 <p>● 意指每一重训动作所消耗的热量</p>
 <p>这里的“运动量”是指重训时每反复1次动作所消耗的热量，可以当成是会运动到全身多少肌肉的指标。</p>
-<p>运动时消耗的热量原则上与<strong>作功量（力 × 距离）</strong>呈等比。<strong>因此使用<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F.md#1">重量</a>愈大的项目，或是在重量相同的情况下，移动距离愈长的项目消耗的热量（运动量）就愈大。</strong></p>
+<p>运动时消耗的热量原则上与<strong>作功量（力 × 距离）</strong>呈等比。<strong>因此使用<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F.md#1">重量</a>愈大的项目，或是在重量相同的情况下，移动距离愈长的项目消耗的热量（运动量）就愈大。</strong></p>
 <p>一般来说，会动到复数关节的多关节项目，作功量会比单关节项目还要大，运动量当然也比较大。同样的道理，由于下半身聚集了许多体积大的肌肉，因此下半身项目的运动量也有比上半身大的倾向。</p>
 <p>运动量较大的项目，<strong>会强力刺激各种贺尔蒙的分泌，包括与肌肉发达相关的类型。缺点是容易感受到全身性的疲惫，也会因为喘不过气等连精神上都备感煎熬。</strong>所以在设计重训菜单时，也要顾及各项目间的均衡。</p>
 <figure id="attachment_12405952" aria-describedby="caption-attachment-12405952" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/weight-training1-cs-health11.jpg"><img class="size-large wp-image-12405952" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training1-cs-health11-600x400.jpg" alt="腿部伸展训练（右图）属于单关节重训，杠铃深蹲（左图）属于多关节重训，后者运动量更大。（采实文化提供）" width="600" b="400" /></a><figcaption id="caption-attachment-12405952" class="wp-caption-text">腿部伸展训练（右）属单关节重训，杠铃深蹲（左）属多关节重训，后者运动量更大。（采实文化）</figcaption></figure>
@@ -69,9 +69,9 @@
 <p>重训的基本目标是让肌肉更发达的肌肥大，以及随之而来的肌力强化。但是有部分的项目还具备“伸展效果”的附加价值。</p>
 <p><strong>这里的伸展效果是指静态伸展动作的主要目的——提升身体柔软度，也就是关节的可动范围。</strong>或许重训给人一种“身体会变硬”的感觉，但是有些项目与伸展操一样能够提升身体柔软度。</p>
 <p>期望获得明显的伸展效果时，应选择会大幅运动关节，且几乎达到肌肉伸展到极限的状态。其中最具代表性的，就是会强力伸展大腿后侧腘绳肌的罗马尼亚硬举。</p>
-<p>静态伸展运动主要是藉由拮抗肌（反方向作用的肌肉）的出力，伸展目标肌肉，但是重训能够藉自身体重、哑铃<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F.md#1">重量</a>与机械负荷等伸展肌肉。</p>
+<p>静态伸展运动主要是藉由拮抗肌（反方向作用的肌肉）的出力，伸展目标肌肉，但是重训能够藉自身体重、哑铃<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F.md#1">重量</a>与机械负荷等伸展肌肉。</p>
 <p>因此<strong>重训带来的伸展效率，比必须自行拉开肌肉的静态伸展运动还要好。</strong></p>
-<figure id="attachment_12406101" aria-describedby="caption-attachment-12406101" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/weight-training4-cs-health11.jpg"><img class="size-large wp-image-12406101" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training4-cs-health11-600x330.jpg" alt="罗马尼亚硬举是能够锻炼腘绳肌、同时提升身体柔软度的重量训练。（采实文化提供）" width="600" b="330" /></a><figcaption id="caption-attachment-12406101" class="wp-caption-text">罗马尼亚硬举是能够锻炼腘绳肌、同时提升身体柔软度的<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F%E8%AE%AD%E7%BB%83.md#1">重量训练</a>。（采实文化提供）</figcaption></figure>
+<figure id="attachment_12406101" aria-describedby="caption-attachment-12406101" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/weight-training4-cs-health11.jpg"><img class="size-large wp-image-12406101" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training4-cs-health11-600x330.jpg" alt="罗马尼亚硬举是能够锻炼腘绳肌、同时提升身体柔软度的重量训练。（采实文化提供）" width="600" b="330" /></a><figcaption id="caption-attachment-12406101" class="wp-caption-text">罗马尼亚硬举是能够锻炼腘绳肌、同时提升身体柔软度的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%8D%E9%87%8F%E8%AE%AD%E7%BB%83.md#1">重量训练</a>。（采实文化提供）</figcaption></figure>
 <p><strong>例：</strong>锻炼腘绳肌之余提升身体柔软度的罗马尼亚硬举（右图）。在稍微弯曲膝盖、上半身前倾的起始姿势下，大腿后侧就会开始强力伸展。伸直膝盖让上半身前倾的直腿硬举（左图），则能够进一步伸展腘绳肌。</p>
 <h2><span style="color: #188638;">五、运动方式难易度</span></h2>
 <p>● 做起来简单的项目，最适合重训新手</p>
@@ -84,57 +84,57 @@
 <figure id="attachment_12406102" aria-describedby="caption-attachment-12406102" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/weight-training5-cs-health11.jpg"><img class="size-large wp-image-12406102" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training5-cs-health11-600x400.jpg" alt="大腿推蹬训练时会藉由与深蹲几乎相同的动作，实现与杠铃深蹲相同的高负荷，还能够维持稳定的姿势，有助于安全挑战肌肉极限。（采实文化提供）" width="600" b="400" /></a><figcaption id="caption-attachment-12406102" class="wp-caption-text">大腿推蹬训练时会藉由与深蹲几乎相同的动作，实现与杠铃深蹲相同的高负荷，还能够维持稳定的姿势，有助于安全挑战肌肉极限。（采实文化）</figcaption></figure>
 <p><strong>例：</strong>大腿推蹬训练时会藉由与深蹲几乎相同的动作，锻炼大腿的股四头肌、内收肌群与臀部的臀大肌。实现与杠铃深蹲相同的高负荷之余，还能够维持稳定的姿势，有助于安全挑战肌肉极限。</p>
 <p>摘自《<span style="color: #188638;"><a style="color: #188638;" href="https://www.books.com.tw/products/0010867753" target="_blank" rel="noopener noreferrer">健身新手重训攻略</a></span>》 采实文化出版</p>
-<p>身处纷乱之世，心存健康之道，就看<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span></span>！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/7/2/n12226219.md#1" target="_blank" rel="noopener noreferrer">医师推荐增肌运动前3名 强身、增骨密度</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/3/n12000954.md#1" target="_blank" rel="noopener noreferrer">增肌就增免疫力 跟医师做3动作 强化下半身肌肉</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/2/17/n11875629.md#1" target="_blank" rel="noopener noreferrer">伏地挺身练全身肌肉 有6大好处 这么做更增肌</a></span></h3>
+<p>身处纷乱之世，心存健康之道，就看<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span></span>！</p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/2/n12226219.md#1" target="_blank" rel="noopener noreferrer">医师推荐增肌运动前3名 强身、增骨密度</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/3/n12000954.md#1" target="_blank" rel="noopener noreferrer">增肌就增免疫力 跟医师做3动作 强化下半身肌肉</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href=><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/17/n11875629.md#1" target="_blank" rel="noopener noreferrer">伏地挺身练全身肌肉 有6大好处 这么做更增肌</a></span></h3>
 <p>责任编辑：李清风◇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/5/n9108791.md#1">永远的传奇—从长春到世界（上）</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/10/21/n11601462.md#1">深蹲时膝盖不能超过脚尖？破解三大深蹲迷思</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/9/n12018374.md#1">不吃晚餐减肥好吗？40岁后不挨饿自然瘦的方法</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/5/19/n12119566.md#1">不吃药抗失智 瑞典国民医师：每天散步30分钟</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/5/28/n12144465.md#1">仰卧起坐增腹肌 有6大好处 正确做高效不伤身</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/6/9/n12171796.md#1">女生重训后变金刚芭比？破解重训4迷思</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/7/29/n12292372.md#1">5个征兆当心肌少症 医师：做对2件事增肌肉量</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/8/20/n12344064.md#1">3类人最易缺蛋白质 教你正确补充增肌</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/20/n13591322.md#1">晚上睡觉腿抽筋？有五个简单预防办法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/5/n9108791.md#1">永远的传奇—从长春到世界（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/21/n11601462.md#1">深蹲时膝盖不能超过脚尖？破解三大深蹲迷思</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/9/n12018374.md#1">不吃晚餐减肥好吗？40岁后不挨饿自然瘦的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/19/n12119566.md#1">不吃药抗失智 瑞典国民医师：每天散步30分钟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144465.md#1">仰卧起坐增腹肌 有6大好处 正确做高效不伤身</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/9/n12171796.md#1">女生重训后变金刚芭比？破解重训4迷思</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/29/n12292372.md#1">5个征兆当心肌少症 医师：做对2件事增肌肉量</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/8/20/n12344064.md#1">3类人最易缺蛋白质 教你正确补充增肌</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/19/n13658224.md#1">著名体能教练的十大健康与体适能建议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/12/n13640906.md#1">健走能分泌肌肉激素 有防中风等12种好处</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/15/n9844557.md#1" target="_blank">毛泽东诗词“蔑视祖宗 自认风流”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/10/n7538390.md#1" target="_blank">晚期食道癌患者：法轮功救了我的命</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/20/n13591006.md#1">男子濒死期间进入另外空间 后奇迹般复活</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605190.md#1">【拍案惊奇】一文读懂俄乌战 普京到底想要什么？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13603459.md#1">杨月清：台湾人都应观看《时代革命》</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605976.md#1">【秦鹏直播】铁链女一声惊人 说明不是小花梅</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600282.md#1">【更新】俄宣战 乌克兰多城遭袭 国际回应</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602565.md#1">【微视频】普京：共产党惹的祸 乌克兰也这么想</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600024.md#1">香港娱乐圈爆发疫情 逾10名艺人确诊染疫</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13599881.md#1">容祖儿卖香港一处豪宅套现 亏损逾百万港币</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/22/n13595350.md#1">高血压易致心肌梗塞 这样吃7天降血压</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/15/n12405683.htm">重训选哪种？五大重点一篇看懂</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/15/n12405683.htm">重训选哪种？五大重点一篇看懂</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtnrng3147/djy/blob/master/gb/20/9/15/n12405683.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/9/15/n12405683.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
